--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AVIS Civitavecchia</title>
 </head>
+
 <body>
-    ....qui il sito....
+    <header>
+        <img src="logo_avis_png.png" alt="logo" id="logo">
+        <ul id="navigation">
+            <li><a href="#">Informazioni Sulla Donazione</a></li>
+            <li><a href="#">Dove Siamo</a></li>
+            <li><a href="#">Alternanza Scuola Lavoro</a></li>
+        </ul>
+    </header>
+    <main></main>
+    <aside></aside>
+    <footer></footer>
 </body>
+
 </html>
