--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AVIS Civitavecchia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,7 +18,12 @@
             <li><a href="#">Alternanza Scuola Lavoro</a></li>
         </ul>
     </header>
-    <main></main>
+    <main>
+        <h2>Prenota ora il tuo prelievo</h2>
+        <p>Donare è un gesto semplice che può salvare molte vite, prenota ora il tuo prelievo cliccando il bottone sottostante, compila il modulo e ti manderemo un email di conferma con tutte le informazioni </p>
+        <button>Prenota Ora</button>
+        <aside></aside>        
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
